<resources>
    <string name="app_name">MegaCompApp</string>
    <string name="title_profile">Profile</string>
    <string name="title_home">Home</string>
    <string name="title_about_app">About app</string>
    <string name="tomas_marny">Tomáš Marný</string>
    <string name="phone_num">+420 159 357 852</string>
    <string name="ceo">CEO</string>
    <string name="megacomp">MegaComp</string>
    <string name="homeText1">IT od roku 1642</string>
    <string name="homeText2">Mezinárodní spolupráce</string>
    <string name="about_this_app">About this app</string>
    <string name="AboutAppText">
        vytvořil \n
        Josef Pospíšil\n
        jako prácí do předmětu\n
        AP7MT\n
        vedoucí cvičení\n
        Ing. Štěpán Dlabaja
    </string>

</resources>