<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.utb.megacompapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        android:gravity="center"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.utb.megacompapp.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        android:gravity="center"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_about_app"
        android:name="com.utb.megacompapp.ui.about_app.AboutAppFragment"
        android:label="@string/title_about_app"
        android:gravity="center"
        tools:layout="@layout/fragment_about_app" />
</navigation>